@@ -23,7 +23,7 @@
 
 #include "global.h"
 #include "preferences.h"
-
+#include "mplayerversion.h"
 
 MplayerProcess::MplayerProcess(QObject * parent) : MyProcess(parent) 
 {
@@ -47,22 +47,7 @@ MplayerProcess::~MplayerProcess() {
 }
 
 bool MplayerProcess::isMplayerAtLeast(int svn_revision) {
-	qDebug("MplayerProcess::isMplayerAtLeast: comparing %d with %d", svn_revision, mplayer_svn);
-
-	if (mplayer_svn == -1) {
-		qWarning("MplayerProcess::isMplayerAtLeast: no version found!");
-	}
-	else
-	if (mplayer_svn == 0) {
-		qWarning("MplayerProcess::isMplayerAtLeast: version couldn't be parsed!");
-	}
-
-	if (mplayer_svn <= 0) {
-		qWarning("MplayerProcess::isMplayerAtLeast: assuming that the mplayer version is greater than %d", svn_revision);
-		return true;
-	}
-
-	return (mplayer_svn >= svn_revision);
+	return MplayerVersion::isMplayerAtLeast(mplayer_svn, svn_revision);
 }
 
 bool MplayerProcess::start() {
@@ -87,9 +72,6 @@ void MplayerProcess::writeToStdin(QString text) {
 	}
 }
 
-//static QRegExp rx_mplayer_revision("^MPlayer (\\S+)-SVN-r(\\d+)-(.*)");
-static QRegExp rx_mplayer_revision("^MPlayer (.*)-r(\\d+)(.*)");
-static QRegExp rx_mplayer_version("^MPlayer ([a-z,0-9,.]+)-(.*)");
 static QRegExp rx_av("^[AV]: *([0-9,:.-]+)");
 static QRegExp rx_frame("^[AV]:.* (\\d+)\\/.\\d+");// [0-9,.]+");
 static QRegExp rx("^(.*)=(.*)");
@@ -258,30 +240,9 @@ void MplayerProcess::parseLine(QByteArray ba) {
 			return;
 		}
 
-#ifdef Q_OS_WIN
-		// Hack to recognize mplayer 1.0rc2 from CCCP:
-		if (line.startsWith("MPlayer CCCP ")) { 
-			line.remove("CCCP "); 
-			qDebug("MplayerProcess: removing CCCP: '%s'", line.toUtf8().data()); 
-		}
-#endif
-		if (mplayer_svn == -1) {
-			if (rx_mplayer_revision.indexIn(line) > -1) {
-				mplayer_svn = rx_mplayer_revision.cap(2).toInt();
-				qDebug("MplayerProcess::parseLine: MPlayer SVN revision found: %d", mplayer_svn);
-			} 
-			else
-			if (rx_mplayer_version.indexIn(line) > -1) {
-				QString version = rx_mplayer_version.cap(1);
-				qDebug("MplayerProcess::parseLine: MPlayer version found: %s", version.toUtf8().data());
-				mplayer_svn = 0;
-				if (version == "1.0rc2") mplayer_svn = 24722;
-				else
-				if (version == "1.0rc1") mplayer_svn = 20372;
-				else qWarning("MplayerProcess::parseLine: unknown MPlayer version");
-
-				qDebug("MplayerProcess::parseLine: MPlayer SVN: %d", mplayer_svn);
-			}
+		if ( (mplayer_svn == -1) && (line.startsWith("MPlayer ")) ) {
+			mplayer_svn = MplayerVersion::mplayerVersion(line);
+			qDebug("MplayerProcess::parseLine: MPlayer SVN: %d", mplayer_svn);
 		}
 
 		// Subtitles
